# laine

./: .gitignore  Cargo.toml  docker-compose.yml
frontend/: .prettierignore  eslint.config.js  index.html  oxfmt.config.ts  oxlint.config.ts  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: app.html  index.css  index.tsx
frontend/src/api/: core.ts  frame.ts  game.ts  people.ts  player.ts  session.ts
frontend/src/component/: playerSelector.module.css  playerSelector.tsx
frontend/src/component/core/: button.module.css  button.tsx  card.module.css  card.tsx  cardColumn.module.css  cardColumn.tsx  checkbox.tsx  dateInput.module.css  dateInput.tsx  field.module.css  field.tsx  header.module.css  header.tsx  input.module.css  input.tsx  login.module.css  login.tsx  select.module.css  select.tsx  textInput.module.css  textInput.tsx
frontend/src/component/frame/: base.module.css  base.tsx  display.module.css  display.tsx  editable.module.css  editable.tsx
frontend/src/component/game/: card.module.css  card.tsx  scoreTable.module.css  scoreTable.tsx
frontend/src/lib/api/: core.ts  frame.ts  game.ts  player.ts  session.ts
frontend/src/lib/util/: edit.ts  format.ts  frames.ts
frontend/src/page/: admin.tsx  edit.tsx  games.tsx  invite.tsx  new.module.css  new.tsx
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/admin/: +page.svelte  CreateModal.svelte  (+1 more)
frontend/src/util/: edit.ts  frames.ts
migrations/: 20260624013217_setup.sql  20260703155259_fix_defaults.sql
src/: main.rs  router.rs
src/routes/: games.rs
(+32 files in other folders)
