[package]
name = "laine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio"] }
time = "0.3.47"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
